...
    );
  }

  @override
  Widget build(BuildContext context) {
    return myWidget(
      id: 'pending.screen',
      child: CallbackShortcuts(
        bindings: <ShortcutActivator, VoidCallback>{
          const SingleActivator(LogicalKeyboardKey.keyC, meta: true):
              _copySelected,
          const SingleActivator(LogicalKeyboardKey.keyC, control: true):
              _copySelected,
...
